# RayTracingRender

./: .gitattributes  CMakeLists.txt  Headers.h  README.md  convert.py  linux_make.sh  linux_run.sh  main.cpp  packager.cpp  vec3.h
_results/: cornell_box.ppm  cornell_box_empty.ppm  cornell_box_two_blocks.ppm  earth.ppm  hollow_glass_ball.ppm  hollow_glass_ball_off_focus.ppm  hollow_glass_ball_small_fov.ppm  many_balls.ppm  motion_blur.ppm  motion_blur_checker.ppm
ext/stb_image/: stb_image.h  stb_image_header.h
ext/tinyobjloader/: tiny_obj_loader.h  tiny_obj_loader_header.h
report/: report.aux  report.tex
resources/san_miguel/: san-miguel-low-poly.mtl  san-miguel.mtl
resources/sponza/: sponza.mtl
src/: AABB.h  Accelerator.h  Aggregate.h  Background.h  Camera.h  Hittable.h  Integrator.h  Light.h  Material.h  Perlin.h  Pixel.h  Ray.h  Skybox.h  Texture.h  Utils.h  Vector3d.h  const.h
src/accelerator/: BVH.h  HittableList.h
src/camera/: SimpleCamera.h
src/core/: Accelerator.h  Camera.h  Hit.h  Hittable.h  Integrator.h  KdNode.h  Light.h  Material.h  NearestPhotons.h  ObjectParser.h  ParticipatingMedium.h  Photon.h  PhotonMap.h  Pixel.h  Ray.h  Skybox.h  Texture.h  Transform.h
src/hittable/: Box.h  Mesh.h  MovingSphere.h  PhotonLight.h  Rectangle.h  Sphere.h  Triangle.h
src/integrator/: PathTracingIntegrator.h  PhotonMappingIntegrator.h
src/light/: DiffuseLight.h
src/material/: BumpMaterial.h  Dielectric.h  Isotropic.h  Lambertian.h  Metal.h  PBRMaterial.h
src/math/: OrthonormalBasis.h  Perlin.h  Utils.h  Vector3d.h
src/medium/: ConstantMedium.h
(+35 files in other folders)
